# Cpp_CommonLIb

./: .clang-format  CMakeLists.txt  README.md  ptr.hpp  stdafx.h  str.cpp  str.hpp  types.hpp
advanced_algorithms_coverage/: _any.hpp  _find.hpp  _search.hpp  algorithms.hpp  find.hpp  index_iterator.hpp  index_iterator_static.hpp  index_transmitter.hpp
errors/: base_error.cpp  base_error.hpp
manipulating_types/: choosing_types.hpp
parallelization/: _base_container.h  _base_iterator.h  _const_iterator.h  _internal_aliases.h  _iterator.h  _macrosses.h  _parallelization_macroses.h  _reverse_iterator.h  blocker.h  execute_around.h  list.h  optional.h  sync.h
parallelization/lockers/: _standart_lockrer.cpp  _standart_lockrer.h
parallelization/members/: _capacity.h  _iterators.h
src/: CMakeLists.txt  advanced_algorithms.hpp  index_iterator.hpp  index_iterator_static.hpp  ptr.hpp  str.cpp  str.hpp  types.hpp
src/advanced_algorithms/: _any.hpp  _common_aa_include.hpp  _find.hpp  find.hpp
src/errors/: CMakeLists.txt  base_error.cpp  base_error.hpp
tests/: CMakeLists.txt  test-common.hpp  test-suit-parallelization.cpp  test-unit-aac_any.cpp  test-unit-aac_find.cpp  test-unit-aac_search.cpp  test-unit-advanced-algirithms-find.cpp  test-unit-base_error.cpp  test-unit-index_iterator.cpp  test-unit-index_iterator_static.cpp  test-unit-index_trasmitter.cpp  test-unit-str.cpp  test-unit-template.cpp
tests/suit/parallelization/: test-suit-parallelization.cpp
tests/unit/: test-unit-base_error.cpp  test-unit-index_trasmitter.cpp  test-unit-str.cpp
